# finpilot-ai

./: .env.example  .env.production  .gitignore  LICENSE  README.md  cli.py  render.yaml
backend/: .dockerignore  Dockerfile  entrypoint.sh  mvnw  mvnw.cmd  pom.xml
docker/: Caddyfile  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml
docs/: architecture.md  developer-guide.md  scoring-logic.md  stack-decisions.md
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ml-service/: .dockerignore  Dockerfile  entrypoint.sh  ml_runner.py  pyproject.toml  requirements.txt
ml-service/app/: business_weights.py  capacity_flag.py  config.py  constants.py  epfo_checks.py  explain.py  feature_engineering.py  main.py  model_loader.py  predictor.py  router.py  schemas.py  seasonality.py
ml-service/app/training/: feature_engineering.py  feature_engineering_extended.py  shadow_model_pipeline.py  train.py  train_model.py  validate_explanations.py
ml-service/models/: model_latest.joblib  training_report.json
ml-service/tests/: test_business_weights.py  test_capacity_flag.py  test_config.py  test_epfo_checks.py  test_explain.py  test_feature_engineering.py  test_model_loader.py  test_predictor.py  test_router.py  test_seasonality.py
scripts/: deploy.sh  run-tests.ps1  setup.ps1  setup.sh
synthetic-data/: calibrate_thresholds.py  config.py  generate_all.py  generate_profiles.py  label_profiles.py  requirements.txt  seed.py  (+2 more)
(+120 files in other folders)
